--- a/theme/karate/templates/article_infos.html
+++ b/theme/karate/templates/article_infos.html
@@ -1,11 +1,11 @@
 <footer class="post-info">
         <abbr class="published" title="{{ article.date.isoformat() }}">
-                Published: {{ article.locale_date }}
+                Date de publication: {{ article.locale_date }}
         </abbr>
         {% if article.modified %}
 		<br />
         <abbr class="modified" title="{{ article.modified.isoformat() }}">
-                Updated: {{ article.locale_modified }}
+                Date de mise à jour: {{ article.locale_modified }}
         </abbr>
         {% endif %}
 
