--- a/theme/karate/templates/authors.html
+++ b/theme/karate/templates/authors.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <section id="content" class="body">
-    <h1>Authors on {{ SITENAME }}</h1>
+    <h1>Auteurs de {{ SITENAME }}</h1>
     <ul>
     {% for author, articles in authors|sort %}
         <li><a href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a> ({{ articles|count }})</li>
