--- a/theme/karate/templates/categories.html
+++ b/theme/karate/templates/categories.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <section id="content" class="body">
-    <h1>Categories for {{ SITENAME }}</h1>
+    <h1>Cat&eacute;gories de {{ SITENAME }}</h1>
     <ul>
     {% for category, articles in categories|sort %}
         <li><a href="{{ SITEURL }}/{{ category.url }}">{{ category }}</a> ({{ articles|count }})</li>
