--- a/theme/karate/templates/index.html
+++ b/theme/karate/templates/index.html
@@ -14,7 +14,7 @@
             </aside><!-- /#featured -->
             {% if loop.length > 1 %}
                 <section id="content" class="body">
-                    <h1>Other articles</h1>
+                    <h1>Autres articles</h1>
                     <hr />
                     <ol id="posts-list" class="hfeed">
             {% endif %}
@@ -27,13 +27,13 @@
             <li><article class="hentry">
                 <header>
                     <h1><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
-                           title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h1>
+                           title="Permalink vers {{ article.title|striptags }}">{{ article.title }}</a></h1>
                 </header>
 
                 <div class="entry-content">
                 {% include 'article_infos.html' %}
                 {{ article.summary }}
-                <a class="readmore" href="{{ SITEURL }}/{{ article.url }}">read more</a>
+                <a class="readmore" href="{{ SITEURL }}/{{ article.url }}">lire la suite</a>
                 {% include 'comments.html' %}
                 </div><!-- /.entry-content -->
             </article></li>
@@ -58,7 +58,7 @@
     {% endfor %}
     </ul>
     {% else %}
-    <p>This site currently has no content.</p>
+    <p>Aucun contenu disponible.</p>
     {% endif %}
 </section>
 {% endif %}
