--- a/theme/karate/templates/period_archives.html
+++ b/theme/karate/templates/period_archives.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <section id="content" class="body">
-<h1>Archives for {{ period | reverse | join(' ') }}</h1>
+<h1>Archives pour la p&eacute;riode {{ period | reverse | join(' ') }}</h1>
 
 <dl>
 {% for article in dates %}
