Change template to smaller infos at the end

--- a/theme/karate/templates/article.html
+++ b/theme/karate/templates/article.html
@@ -27,8 +27,8 @@
     </header>
 
     <div class="entry-content">
-      {% include 'article_infos.html' %}
       {{ article.content }}
+      {% include 'article_infos_light.html' %}
     </div><!-- /.entry-content -->
     {% if DISQUS_SITENAME and SITEURL and article.status != "draft" %}
     <div class="comments">
