change light footer class

--- a/theme/karate/templates/article_infos_light.html
+++ b/theme/karate/templates/article_infos_light.html
@@ -1,4 +1,4 @@
-<footer class="post-info">
+<footer class="post-info-footer">
         <abbr class="published" title="{{ article.date.strftime('%d/%m/%Y') }}">
                 Publié le {{ article.date.strftime('%d/%m/%Y') }} par {% for author in article.authors %}
                         <a class="url fn" href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a>
