--- a/theme/karate/templates/index.html
+++ b/theme/karate/templates/index.html
@@ -5,25 +5,15 @@
     {% for article in articles_page.object_list %}
 
         {# First item #}
-        {% if loop.first and not articles_page.has_previous() %}
-            <aside id="featured" class="body">
+        {% if not articles_page.has_previous() %}
+            <aside id="content" class="body">
                 <article>
                     <h1 class="entry-title"><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1>
-                    {% include 'article_infos.html' %}{{ article.content }}{% include 'comments.html' %}
+                    {{ article.content }}{% include 'article_infos_light.html' %}{% include 'comments.html' %}
                 </article>
-            </aside><!-- /#featured -->
-            {% if loop.length > 1 %}
-                <section id="content" class="body">
-                    <h1>Autres articles</h1>
-                    <hr />
-                    <ol id="posts-list" class="hfeed">
-            {% endif %}
+            </aside><
         {# other items #}
         {% else %}
-            {% if loop.first %}
-                <section id="content" class="body">
-                    <ol id="posts-list" class="hfeed" start="{{ articles_paginator.per_page -1 }}">
-            {% endif %}
             <li><article class="hentry">
                 <header>
                     <h1><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
@@ -31,9 +21,9 @@
                 </header>
 
                 <div class="entry-content">
-                {% include 'article_infos.html' %}
                 {{ article.summary }}
                 <a class="readmore" href="{{ SITEURL }}/{{ article.url }}">lire la suite</a>
+                    {% include 'article_infos_light.html' %}
                 {% include 'comments.html' %}
                 </div><!-- /.entry-content -->
             </article></li>
