--- a/theme/karate/templates/base.html
+++ b/theme/karate/templates/base.html
@@ -23,7 +23,7 @@
                 <h1><a href="{{ SITEURL }}/">{{ SITENAME }}{% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a></h1>
                 <nav><ul>
                 {% for title, link in MENUITEMS %}
-                    <li><a href="{{ link }}">{{ title }}</a></li>
+                    <li><a href="{i{ link }}">{{ title }}</a></li>
                 {% endfor %}
                 {% if DISPLAY_CATEGORIES_ON_MENU -%}
                 {% for cat, null in categories %}
